@@ -27,6 +27,7 @@ version 2.0.0
 	  setting (Ettore Simone)
 	* Log viewer aggregates logs from the same "Person," (contact, meta-
 	  contact, whatever) (Richard Laager)
+	* Message formatting persists between messages (Igor Belyi)
 
 	Bug fixes:
 	* People using input methods can now use Enter again.
